<resources>
    <string name="app_name">Zehntausend</string>
    <string name="player_name">Player name</string>
    <string name="add">Add</string>
    <string name="new_game">New game</string>
    <string name="start_game">Start game</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="resume">Resume</string>
    <string name="history">History</string>
    <string name="brand_icon">Brand Icon</string>
    <string name="finish">Finish</string>
    <string name="id">Id</string>
    <string name="player">Player</string>
    <string name="add_player">Add player</string>
    <string name="show_graph">Show graph</string>
    <string name="winner">Player won!</string>
    <string name="back">Back</string>
    <string name="dice">Dice</string>
    <string name="historyDetailWinner">"1st"</string>
    <string name="historyDetailSecond">"2nd"</string>
    <string name="historyDetailThird">3rd</string>
    <string name="graph">Graph</string>
    <string name="date">01.01.2020</string>
    <string name="duration">60 min</string>
    <string name="points">10000</string>
</resources>
