<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newGameToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="@style/ToolBarStyle"
        app:title="@string/new_game"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playerListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/newGameControls"
        android:layout_below="@+id/newGameToolbar"
        android:layout_marginVertical="8dp"/>

    <LinearLayout
        android:id="@+id/newGameControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:elevation="4dp"
        android:background="@color/white">

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="addPlayer"
            android:text="@string/add_player"/>

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="startGame"
            android:text="@string/start_game" />
    </LinearLayout>

</RelativeLayout>