<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/playerId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="20sp"
                android:layout_marginHorizontal="8dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <EditText
                android:id="@+id/playerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player"
                android:autofillHints="@string/player"
                android:inputType="textPersonName"
                android:layout_marginHorizontal="8dp"
                android:layout_toEndOf="@id/playerId"
                android:layout_toStartOf="@id/deletePlayerButton"
                android:layout_centerVertical="true"/>

            <ImageButton
                android:id="@+id/deletePlayerButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_close"
                android:background="#FFFFFF"
                android:contentDescription="@string/delete"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>