<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameEndActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/rotator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/rotating_icon1"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="8dp"
                    android:src="@drawable/one"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/rotating_icon2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="8dp"
                    android:src="@drawable/one"/>

                <ImageView
                    android:id="@+id/rotating_icon3"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="8dp"
                    android:src="@drawable/one"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="-16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="64dp"
            android:paddingVertical="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textWinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winner"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="16dp"
                android:textSize="32sp"
                android:textAppearance="?textAppearanceHeadline6"
                android:textAllCaps="true"
                android:letterSpacing="0.13"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonShowGraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_graph"
                android:onClick="graph"
                android:layout_marginVertical="8dp"
                android:layout_below="@id/textWinner"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:onClick="end"
                android:layout_below="@+id/buttonShowGraph"
                android:layout_marginVertical="8dp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>