<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HistoryDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/historyDetailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ToolBarStyle"
        app:title="@string/history"
        android:transitionName="historyActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="16dp"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <include
                        layout="@layout/chart"
                        android:layout_width="match_parent"
                        android:layout_height="400dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/colorPrimaryLight">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp">

                        <TextView
                            android:id="@+id/winnerLabel"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:text="@string/historyDetailWinner"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentStart="true"/>

                        <TextView
                            android:id="@+id/winnerPoints"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textColor="@color/white"
                            android:layout_centerVertical="true"
                            android:textSize="16sp"
                            android:text="10000" />

                        <TextView
                            android:id="@+id/winnerName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/winnerLabel"
                            android:layout_toStartOf="@id/winnerPoints"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            android:layout_centerVertical="true"
                            android:text="Philipp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp">

                        <TextView
                            android:id="@+id/secondLabel"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:text="@string/historyDetailSecond"
                            android:textSize="16sp"
                            android:layout_centerVertical="true"
                            android:textColor="@color/white"
                            android:layout_alignParentStart="true"/>

                        <TextView
                            android:id="@+id/secondPoints"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:text="10000" />

                        <TextView
                            android:id="@+id/secondName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/secondLabel"
                            android:layout_toStartOf="@id/secondPoints"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:text="Philipp"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/thirdContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp">

                        <TextView
                            android:id="@+id/thirdLabel"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:text="@string/historyDetailThird"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_alignParentStart="true"/>

                        <TextView
                            android:id="@+id/thirdPoints"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:text="10000" />

                        <TextView
                            android:id="@+id/thirdName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/thirdLabel"
                            android:layout_toStartOf="@id/thirdPoints"
                            android:layout_marginStart="8dp"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:text="Philipp" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>